--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "Simple grpc server node app",
   "main": "server.js",
   "scripts": {
+    "copy-proto": "rm ./src/grpcjs/proto/* && cp -R ../protos/gen/src/* ./src/",
     "tsc": "tsc",
     "start": "tsc && node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,9 +12,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@grpc/grpc-js": "^1.1.8"
+    "@grpc/grpc-js": "^1.1.8",
+    "google-protobuf": "^3.14.0-rc.1"
   },
   "devDependencies": {
+    "@types/google-protobuf": "^3.7.4",
+    "grpc-tools": "^1.9.1",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5"
   }
